[metadata]
name = PyWiSE
version = attr: wise.__version__
author = Arthur Correnson and Dominic Steinhoefel
author_email = dominic.steinhoefel@cispa.de
description = WiSE Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/acorrenson/WiSE
project_urls =
    Bug Tracker = https://github.com/acorrenson/WiSEissues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    antlr4-python3-runtime==4.11
    packaging>=21.3
    toolz>=0.12.0
    wheel>=0.37.1
    z3-solver>=4.8.17.0

[options.extras_require]
test =
    pytest-pycharm>=0.7.0
    pytest-xdist>=2.4.0
    pytest>=7.1.2
dev =
    black>=22.8.0
    build>=0.8.0
    twine>=4.0.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wise = wise.cli:main

[antlr]
# Specify grammars to generate parsers for; default: None
#grammars = <grammar> [grammar> ...]
# Specify directories where output is generated; default: ./
#output = [default=<output path>]
#         [<grammar>=<output path> ...]
output = default=.
# Generate a parse tree listener (yes|no); default: yes
listener = yes
# Generate parse tree visitor (yes|no); default: no
#visitor = no
# Generate file dependencies (yes|no); default: no
#depend = no
